# Sentinel

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.hardened.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
alembic/: env.py
data/: lexicon_seed.json
docs/: README.md  api-reference.md  data-collection-strategy.md  deployment.md  faq.md  integration-guide.md  master.md  ml-readiness-gap-analysis.md  operations.md  quickstart.md  security.md
infra/: postgres-init.sql
migrations/: 0001_lexicon_entries.sql  0002_lexicon_releases.sql  0003_lexicon_release_audit.sql  0004_async_monitoring_core.sql  0005_lexicon_release_audit_proposal_promote.sql  0006_retention_legal_hold_primitives.sql  0007_lexicon_entry_embeddings.sql  0008_appeals_core.sql  0009_appeals_original_decision_id_backfill.sql  0010_monitoring_queue_event_uniqueness.sql  0011_lexicon_entry_metadata_hardening.sql  0012_model_artifact_lifecycle.sql  0013_multi_model_embeddings.sql
scripts/: apply_migrations.py  apply_sql_file.py  benchmark_embedding_candidates.py  benchmark_hot_path.py  build_ml_calibration_dataset.py  calibrate_claim_likeness.py  check_contract.py  check_go_live_readiness.py  evaluate_language_packs.py  manage_lexicon_release.py  manage_model_artifact.py  run_async_worker.py  run_partner_connector_ingest.py  sync_lexicon_seed.py  validate_ml_dataset_release.py  verify_tier2_wave1.py
tests/: test_admin_appeals_api.py  test_admin_phase.py  test_annotation_pipeline.py  test_api.py  test_appeals_postgres_integration.py  test_appeals_schema_integration.py  test_async_monitoring_schema_integration.py  test_async_priority.py  test_async_state_machine.py  test_async_worker.py  test_async_worker_integration.py  test_audit_events.py  test_benchmark.py  test_build_ml_calibration_dataset.py  test_calibrate_claim_likeness_script.py  test_claim_calibration.py  test_claim_likeness.py  test_contract.py  test_embedding_bakeoff.py  test_eval_harness.py  test_go_live_readiness.py  test_health.py  test_hot_triggers.py  (+45 more)
(+181 files in other folders)
