[project]
name = "sentinel"
version = "0.1.0"
description = "Project Sentinel moderation API vertical slice"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "redis>=5.0.0,<6.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pre-commit==4.0.1",
  "pyright==1.1.385",
  "pyyaml>=6.0.0,<7.0.0",
  "pytest>=8.0.0,<9.0.0",
  "ruff==0.6.9",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/sentinel_api/main.py" = ["B008"]
