[project]
name = "sentinel"
version = "0.1.0"
description = "Project Sentinel moderation API vertical slice"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "limits",
  "prometheus-client",
  "pydantic",
  "psycopg[binary]",
  "redis",
  "structlog",
  "uvicorn",
  "PyJWT",
]

[project.optional-dependencies]
dev = [
  "httpx",
  "pre-commit",
  "pyright",
  "pyyaml",
  "pytest",
  "ruff",
]
ops = [
  "alembic",
  "tenacity",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/sentinel_api/main.py" = ["B008"]
